<resources>

    <!-- 主页 -->
    <string name="app_name">Ganker</string>

    <!-- drawer -->
    <string name="fuli">福利</string>
    <string name="category">干货</string>
    <string name="gankio">Gank.io</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>


    <!-- 资源页 -->
    <string name="meizhi">妹纸</string>
    <string name="android">Android</string>
    <string name="ios">iOS</string>
    <string name="relax_video">休息视频</string>
    <string name="front_end">前端</string>
    <string name="expand_resource">扩展资源</string>
    <string name="recommend">瞎推荐</string>

    <!-- WebView页-->
    <string name="open_by_external_browser">外部浏览器打开</string>
    <string name="copy_url">复制链接</string>
    <string name="refresh">刷新</string>

    <!-- 提示 -->
    <string name="network_error">加载失败，请检查网络</string>
    <string name="loading">加载中</string>

</resources>
